--- a/frontend/src/styles/login-style.css
+++ b/frontend/src/styles/login-style.css
@@ -1,4 +1,33 @@
 /* Center the container and give it some styling */
+.alert {
+    background-color: #eff6ff; /* Light blue background */
+    border: 1px solid #bfdbfe; /* Blue border */
+    padding: 16px;
+    border-radius: 8px;
+    margin-top: 16px;
+    font-size: 14px;
+  }
+  
+  .alert-description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .accept-cookies {
+    padding: 8px 16px;
+    background-color: #3b82f6; /* Blue color */
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .accept-cookies:hover {
+    background-color: #2563eb; /* Darker blue on hover */
+  }
+  
+
 .login-container {
     display: flex;
     width: 100%;
@@ -10,6 +39,11 @@
     align-items: center;
     align-content: center;
     margin: auto;
+    flex-wrap: wrap;
+}
+
+#signup-link {
+    margin-top: 10px;
 }
 
 /* Input styles */
